# alexandria_project

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: client.rs  mod.rs
src/controller/: isbn_endpoint.rs  mod.rs  test_endpoint.rs
src/model/book/: book.rs  mod.rs
src/repository/book/: book.rs
src/service/: mod.rs
src/service/thai_isbn/: mod.rs  parser.rs  request.rs
static/: index.html
